# MCVR

./: .gitmodules  CMakeLists.txt  README.md
src/common/: shared.hpp
src/core/: CMakeLists.txt
src/core/middleware/: com_radiance_client_option_Options.cpp  com_radiance_client_proxy_vulkan_BufferProxy.cpp  com_radiance_client_proxy_vulkan_RendererProxy.cpp  com_radiance_client_proxy_world_ChunkProxy.cpp  com_radiance_client_proxy_world_EntityProxy.cpp
src/core/render/: buffers.cpp  buffers.hpp  chunks.cpp  chunks.hpp  entities.cpp  entities.hpp  pipeline.cpp  render_framework.cpp  render_framework.hpp  renderer.hpp  scenario_color_grading.cpp  scenario_color_grading.hpp  textures.cpp  textures.hpp  vertex_formats.cpp  world.cpp
src/core/render/modules/: ui_module.cpp  ui_module.hpp
src/core/render/modules/world/dlss/: dlss_module.cpp  dlss_wrapper.cpp  dlss_wrapper.hpp
src/core/render/modules/world/fsr_upscaler/: fsr3_upscaler.cpp  fsr3_upscaler.hpp  fsr_setup.cpp  fsr_setup.hpp  fsr_upscaler_module.cpp  fsr_upscaler_module.hpp
src/core/render/modules/world/nrd/: nrd_module.cpp  nrd_module.hpp  nrd_wrapper.cpp  nrd_wrapper.hpp
src/core/render/modules/world/post_render/: post_render_module.cpp  post_render_module.hpp
src/core/render/modules/world/ray_tracing/: ray_tracing_module.cpp  ray_tracing_module.hpp
src/core/render/modules/world/ray_tracing/submodules/: atmosphere.cpp  atmosphere.hpp  world_prepare.cpp  world_prepare.hpp
src/core/render/modules/world/temporal_accumulation/: temporal_accumulation_module.cpp  temporal_accumulation_module.hpp
src/core/render/modules/world/tone_mapping/: tone_mapping_module.cpp  tone_mapping_module.hpp
src/core/render/modules/world/xess_upscaler/: xess_sr_module.cpp  xess_sr_module.hpp  xess_wrapper.cpp  xess_wrapper.hpp
src/core/vulkan/: buffer.cpp  buffer.hpp  device.cpp  device.hpp  image.cpp  image.hpp  instance.cpp  instance.hpp  physical_device.cpp  physical_device.hpp  pipeline.cpp  sbt.cpp  shader.cpp  shader.hpp  swapchain.cpp  vertex.cpp  vertex.hpp
src/shader/: CMakeLists.txt  rgb_bgr_fix.frag
src/shader/overlay/core/: position.frag  position_color.frag  position_color_tex_light.frag  position_color_tex_overlay_light_normal_entity_cull.frag  position_color_tex_overlay_light_normal_entity_no_outline.frag  position_end_portal.frag  position_tex_color.frag  position_tex_glint.frag
src/shader/util/: alpha_mode.glsl  color_space.glsl  disney.glsl  labpbr.glsl  ray.glsl  ray_payloads.glsl  restir.glsl  sampling_helpers.glsl  util.glsl  vertex.glsl  volumetric_fog.glsl
src/shader/world/nrd/: compose.comp  prepare.comp
src/shader/world/post_render/: world_post.frag  world_post.vert  world_post_star.frag
src/shader/world/ray_tracing/: fog_temporal.comp  refraction_temporal.comp
src/shader/world/ray_tracing/internal/: cloud_shadow.rahit  clouds.rahit  clouds.rchit  configs.json  default.rahit  default.rchit  end_gateway.rahit  end_gateway.rchit  end_portal.rchit  hand.rmiss  shadow.rahit  shadow.rchit  shadow.rmiss  sharc_resolve.comp  transparent_only.rahit  transparent_only.rchit  water_mask.rahit  water_mask.rchit  world.rgen  world.rmiss  world_no_reflect.rchit
src/shader/world/tone_mapping/: exposure.comp  hist.comp  tone_mapping.frag
src/shader/world/upscaler/: linear_to_device_depth.comp
